* Fixed issues with `FORCE_SSL_ADMIN` set to true on admin modules.
* Made Google+ icons standards-compliant.
* Added ability to hide Theme License admin page via `themeblvd_global_config` filter.
* Added filterable "edit_theme_options" capability to License admin page.
* Improved default `content-attachment.php`.
* Slight UI improvements to Logo option in default Theme Options panel.
* In default `content.php` and `content-attachment.php` template parts, removed anchor tag on post title for single posts.
* In default `content.php` and `content-page.php`, moved clearfix to directly below `the_content()`.
* WP 3.6: Filtered `wp_link_pages()` to match `themeblvd_pagination()`
* WP 3.6: Added responsive support for self-hosted videos.
* WP 3.6: Added responsive support for self-hosted audio files.

1.0.2
-----

* Fixed errors with how featured images display responsively as result of v1.0.1 update.
* Fixed a couple styling quirks on default skin's main menu.
* Fixed jQuery issues in selecting pages with slugs containing non-English characters in option interface. -- This was a result from the new "fancy" select menu addition from the last update.
* Re-generated jumpstart.po for localization.

1.0.1
-----

* Updated framework version to 2.2.1.
* Adjusted default Jump Start's responsive structure to use the "snap effect."
* Optimized database queries on frontend.
* Fixed pagination bug with post list/grid page templates.
* Fixed bug with showing/hiding meta data on single blog posts.
* Fixed slider image links in IE.
* Fixed any PHP notices from 404 pages where `$post` is not an object.
* Fixed sidebar layout to find default when none exists.
* Fixed issues with Plugin Installer on WP Multisite.
* Fixed WP's built-in Twitter embed to work with responsive design.
* Fixed bug with manual offset on post grids.
* Fixed issue with mailto and link target in `themeblvd_contact_bar`.